# html-to-deck

./: .gitattributes  LICENSE  README.md  deckspec.py  pyproject.toml
audit/: __init__.py  checks.py  engine.py  models.py
design/: __init__.py  rules.py
docs/: architecture.md  authoring-decks.md  design-tokens.md  html-slide-deck-comparison.md  merge-conflict-playbook.md  runtime-migration-v1.md
extract/: __init__.py  block_extractors.py  models.py
fixtures/expected/: minimal_deck.json
fixtures/html/: article-story.html  case-study.html  landing-page-narrative.html  report-summary.html
io/: snapshots.py
layout/: __init__.py  pattern_selector.py
narrative/: __init__.py  infer.py  models.py  to_slides.py
pipeline/: map_to_slides.py
renderers/json_spec/: __init__.py  renderer.py
src/html_to_deck/: __init__.py  _version.py  api.py  cli.py  types.py
src/html_to_deck_v1/: __init__.py  __main__.py  pipeline.py
tests/: conftest.py  test_audit.py  test_audit_contract.py  test_audit_snapshot.py  test_code_rendered_patterns.py  test_design.py  test_e2e_snapshots.py  test_extract.py  test_extract_blocks_rich.py  test_html_themes_and_images.py  test_html_to_deck_golden.py  test_ingest.py  test_ingest_loader.py  test_layout.py  test_mapping.py  test_narrative.py  test_pipeline_integration.py  test_pipeline_quality.py  test_renderer_boundaries.py  test_renderer_html_runtime.py  test_renderer_json.py  test_runtime_path_guard.py  test_schema_compatibility.py
tests/snapshots/: audit_report.json  canonical_audit_report.json  canonical_ir.json  deck_json.json  (+2 more)
(+29 files in other folders)
